# bailinghub

./: .dockerignore  .env.example  .gitignore  .npmignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSING.md  NOTICE  README.en.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  VISION.md  config.example.json  docker-compose.images.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/: pull_request_template.md
brain/: README.en.md  README.md  profiles.json
docs/: AI_FRIENDLY_TOOLS.en.md  AI友好工具设计指南.md  ARCHITECTURE.en.md  ARCHITECTURE.md  CHANGELOG.en.md  CHANGELOG.md  CHANNELS.en.md  CHANNELS.md  CLIENT_API.md  COMPATIBILITY.en.md  CONTRACT.en.md  CONTRACT.md  DEMO.en.md  DEMO.md  ECOSYSTEM.en.md  ECOSYSTEM.md  INDEPENDENT_VALIDATION.en.md  INDEPENDENT_VALIDATION.md  INTEGRATION.en.md  OPERATIONS.en.md  OPERATIONS.md  PIPELINE.en.md  PIPELINE.md  QUICKSTART.en.md  QUICKSTART.md  README.en.md  README.md  RELEASE_NOTES_v0.1.0.en.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.en.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.en.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.en.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.1.4.en.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.1.5.en.md  RELEASE_NOTES_v0.1.5.md  RELEASE_NOTES_v0.1.6.en.md  (+17 more)
schemas/: agent-capability-contract.schema.json  tool-definition.schema.json
scripts/: check-client-api-ecosystem.mjs  check-doc-links.mjs  check-image-tags.sh  (+28 more)
sdk/python/: README.md  pyproject.toml
sdk/python/bailing_connect/: __init__.py
sdk/python/examples/: build_spec.py
(+444 files in other folders)
